# trailtraining

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  REPORT.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ci.yml.save
demo/: README.md  coach_brief_meal-plan.md  coach_brief_recovery-status.md  coach_brief_training-plan.json  coach_brief_training-plan.txt  combined_rollups.json  combined_summary.json  formatted_personal_data.json  readiness_and_risk_forecast.json  shortened_rhr.json  shortened_sleep.json
demo/eval/: eval_report.json  eval_report.original.json  eval_report.revised.json  revised-plan-reeval.json
demo/plans/: coach_brief_training-plan.json  coach_brief_training-plan.txt  revised-plan-reeval.json  revised-plan.json  revised-plan.txt  selected-plan.json  selected-plan.txt
demo/rollups/: combined_rollups.json
demo/status/: coach_brief_meal-plan.md  coach_brief_recovery-status.md
docs/: engineering.md
src/trailtraining/: cli.py  config.py  contracts.py  doctor.py  ics_export.py  providers.py
src/trailtraining.egg-info/: SOURCES.txt
src/trailtraining/commands/: common.py  llm_commands.py  parser.py  pipeline_commands.py
src/trailtraining/data/: combine.py  garmin.py  personal_profile.py  strava.py
src/trailtraining/forecast/: forecast.py
src/trailtraining/intervals/: intervalsClient.mjs  intervals_fetch_wellness.mjs  server.mjs
src/trailtraining/llm/: __init__.py  coach.py  coach_prompting.py  constraints.py  eval.py  guardrails.py  presets.py  prompts.py  revise.py  rubrics.py  schemas.py  shared.py  signals.py  soft_eval.py  windowing.py
src/trailtraining/metrics/: training_load.py
src/trailtraining/notebooks/: fatigue_readiness.ipynb
src/trailtraining/notebooks/model_outputs/: readiness_model.joblib  readiness_rhr_model.joblib
src/trailtraining/pipelines/: download_garmin_data.py  garmin.py  intervals.py  run_all.py  strava.py
src/trailtraining/tests/: test_coach_constraints.py  test_garmin_filter_sleep.py  test_imports.py  test_intervals.py
src/trailtraining/util/: errors.py  http_retry.py  llm_helpers.py  logging_config.py  state.py
src/trailtraining/web/: auth_server.py
tests/: __init__.py  _artifact_builders.py  test_cli_smoke.py  test_coach_constraints.py  test_coach_prompting.py  test_coach_repair_fallbacks.py  test_combine.py  test_commands_common.py  test_commands_llm.py  test_commands_pipeline.py  test_constraints_helpers.py  test_eval_additional.py  test_forecast.py  test_garmin_formatting.py  test_guardrails_additional.py  test_integration_artifacts.py  test_intervals_expanded.py  test_issue_fixes.py  test_lifestyle_notes.py  test_parallel_and_skip_synthesis.py  test_providers.py  test_regression_review_fixes.py  test_revise_plan.py  test_revise_repair_fallbacks.py  test_revision_pipeline_fixes.py  test_signals.py  test_soft_eval.py  test_soft_eval_adversarial.py  test_strava_pipeline.py  test_training_load.py
