[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trailtraining"
version = "0.1.0"
description = "Pipelines for Garmin/Strava + fatigue modeling"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Cameron" }]
keywords = ["data-pipeline", "strava", "garmin", "etl", "llm-evaluation", "cli"]
dependencies = [
  "requests>=2.31",
  "Flask>=2.3",
  "openai>=1.0.0",
  "pydantic>=2.8",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "ruff==0.4.10",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pre-commit>=3.6",
  "mypy>=1.8",
  "types-requests>=2.31",
  "pydantic>=2.8",
]
analysis = [
  "numpy>=1.26",
  "pandas>=2.2",
]

[tool.mypy]
python_version = "3.11"
files = [
  "src/trailtraining/contracts.py",
  "src/trailtraining/forecast",
  "src/trailtraining/llm",
  "src/trailtraining/data/strava.py",
  "src/trailtraining/pipelines/intervals.py",
  "src/trailtraining/data/combine.py",
  "tests/test_integration_artifacts.py",
]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
no_implicit_optional = true
warn_return_any = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "garmindb.*",
  "openai",
  "flask",
]
ignore_missing_imports = true

[project.scripts]
trailtraining = "trailtraining.cli:main"

[project.urls]
Repository = "https://github.com/MauriceCC04/trailtraining"
Issues = "https://github.com/MauriceCC04/trailtraining/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["trailtraining"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 10

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",
  "UP007",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
