[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trailtraining"
version = "0.1.0"
description = "Pipelines for Garmin/Strava + fatigue modeling"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Cameron" }]
keywords = ["data-pipeline", "strava", "garmin", "etl", "llm-evaluation", "cli"]
dependencies = [
  "requests>=2.31",
  "Flask>=2.3",
  "openai>=1.0.0",
  "pydantic>=2.8",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "ruff==0.4.10",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pre-commit>=3.6",
  "mypy>=1.8",
  "types-requests>=2.31",
  "pydantic>=2.8",
]
analysis = [
  "numpy>=1.26",
  "pandas>=2.2",
]

[tool.mypy]
python_version = "3.11"
files = ["src/trailtraining", "tests"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false  # baseline; tightened per-module below
no_implicit_optional = true
warn_return_any = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# Third-party stubs that are absent or incomplete
[[tool.mypy.overrides]]
module = [
  "garmindb.*",
  "openai",
  "flask",
]
ignore_missing_imports = true

# Modules that are already fully annotated — enforce stricter rules here
[[tool.mypy.overrides]]
module = [
  "trailtraining.contracts",
  "trailtraining.forecast.*",
  "trailtraining.llm.*",
  "trailtraining.metrics.*",
  "trailtraining.util.*",
  "trailtraining.providers",
  "trailtraining.data.strava",
  "trailtraining.data.combine",
  "trailtraining.data.personal_profile",
]
disallow_untyped_defs = true

# Newly annotated modules graduating to strict
[[tool.mypy.overrides]]
module = [
  "trailtraining.cli",
  "trailtraining.commands.*",
  "trailtraining.pipelines.intervals",
  "trailtraining.pipelines.run_all",
  "trailtraining.pipelines.run_all_intervals",
  "trailtraining.pipelines.strava",
]
disallow_untyped_defs = true

[project.scripts]
trailtraining = "trailtraining.cli:main"

[project.urls]
Repository = "https://github.com/MauriceCC04/trailtraining"
Issues = "https://github.com/MauriceCC04/trailtraining/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1 --strict-config --strict-markers"
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["trailtraining"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",
  "UP007",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
